# Proper-Trench-Coats

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: repoData.txt  repoDataTestOnCustomInt.txt  shoppingCartData.csv  shoppingCartData.html
domain/: dynamic_vector.h  trench_coat.cpp  trench_coat.h
exceptions/: dynamic_vector_exceptions.h  repository_exceptions.h  trench_coat_exceptions.h
service/: admin.cpp  admin.h  user.cpp  user.h  utils.cpp  utils.h
storage/: csvAndhtml_repo.h  file_repo.h  repo_using_stl.cpp  repo_using_stl.h  repository.cpp  repository.h
tests/: test_all.cpp  test_all.h  test_domain.cpp  test_domain.h  test_repository.cpp  test_repository.h  test_service.cpp  test_service.h  test_validators.cpp  test_validators.h
ui/: gui.cpp  gui.h  menu_ui.cpp  menu_ui.h
validators/: trench_coat validator.cpp  trench_coat validator.h  trench_coat_validator.cpp
